--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,93 @@ body {
   display: none;
 }
 
+/* Navbar search form */
+.navbar .search-form {
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 50rem;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  /* opacity: 0; */
+  transition: 0.3s;
+  margin-right: 2rem;
+}
+
+.navbar .search-form.active {
+  transform: scaleY(1);
+  /* opacity: 1; */
+}
+
+.navbar .search-form input {
+  width: 100%;
+  height: 100%;
+  font-size: 1.6rem;
+  color: var(--bg);
+  padding: 1rem;
+}
+
+.navbar .search-form label {
+  color: var(--bg);
+  margin-right: 1.3rem;
+  font-size: 2rem;
+  cursor: pointer;
+  padding-top: 0.2rem;
+}
+
+/* Shopping cart section */
+.shopping-cart {
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  background-color: white;
+  padding: 0 1.5rem;
+  color: var(--bg);
+  transition: 0.3s;
+}
+
+.shopping-cart.active {
+  right: 0;
+}
+
+.navbar .shopping-cart img {
+  height: 6rem;
+}
+
+.shopping-cart .cart-item {
+  padding: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  border-bottom: 1px dashed #666;
+  position: relative;
+}
+
+.shopping-cart h3 {
+  font-size: 1.6rem;
+  padding-bottom: 0.5rem;
+}
+
+.shopping-cart .item-price {
+  font-size: 1.3;
+}
+
+.shopping-cart .remove-item {
+  position: absolute;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.shopping-cart .remove-item:hover {
+  color: var(--primary);
+}
+
 /* Hero section */
 
 .hero {
@@ -154,13 +241,15 @@ body {
 /* About */
 .about,
 .menu,
-.contact {
+.contact,
+.products {
   padding: 9rem 7% 1.4rem;
 }
 
 .about h2,
 .menu h2,
-.contact h2 {
+.contact h2,
+.products h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
@@ -168,7 +257,8 @@ body {
 
 .about h2 span,
 .menu h2 span,
-.contact h2 span {
+.contact h2 span,
+.products h2 span {
   color: var(--primary);
 }
 
@@ -220,7 +310,7 @@ body {
 .menu .text-menu {
   border: 2px dashed var(--primary);
   padding: 0.5rem 2rem;
-  min-width: 76rem;
+  width: 100%;
   border-radius: 1rem;
 }
 
@@ -243,7 +333,8 @@ body {
   font-weight: 400;
 }
 
-.contact p {
+.contact p,
+.products p {
   text-align: center;
   max-width: 50rem;
   margin: auto;
@@ -270,6 +361,75 @@ body {
 
 .menu .row .menu-card .menu-card-title {
   margin: 1rem auto 0.5rem;
+}
+
+/* Products section */
+.products .row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.products .product-card {
+  text-align: center;
+  border: 1px solid #666;
+  padding: 2rem;
+}
+
+.products .product-icons {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.products .product-icons a {
+  color: white;
+  width: 4rem;
+  height: 4rem;
+  border: 1px solid #666;
+  border-radius: 50%;
+  margin: 0.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.products .product-icons a:hover {
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+
+.products .product-img {
+  padding: 1rem 0;
+}
+
+.products .product-img img {
+  height: 25rem;
+}
+
+.products .product-content h3 {
+  font-size: 2rem;
+}
+
+.products .product-stars {
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
+}
+
+.products .product-stars .star-full {
+  fill: var(--primary);
+}
+
+.products .product-price {
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+.products .product-price span {
+  text-decoration: line-through;
+  font-weight: lighter;
+  font-size: 1rem;
 }
 
 /* Contact section */
@@ -365,6 +525,89 @@ footer .credit a {
   color: var(--bg);
 }
 
+/* Modal Box */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.modal-container {
+  position: relative;
+  width: 80%;
+  margin: 14% auto;
+  border: 2px solid #666;
+  background-color: #fefefe;
+  color: var(--bg);
+  padding: 1.2rem;
+  animation: animateModal 0.5s;
+}
+
+/* Modal Animation */
+@keyframes animateModal {
+  from {
+    top: -100%;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+.modal-container .close-modal {
+  color: var(--bg);
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.modal-container .close-modal:hover {
+  color: red;
+}
+
+.modal-content {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.modal-content img {
+  height: 19rem;
+  margin-right: 2rem;
+}
+
+.modal-content h3 {
+  font-size: 1.7rem;
+  color: var(--bg);
+}
+
+.modal-content p {
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-top: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.modal-content a {
+  display: flex;
+  gap: 1rem;
+  background-color: var(--primary);
+  width: 12rem;
+  color: white;
+  padding: 1rem 1.6rem;
+  margin-top: 1rem;
+}
+
+.modal-content a:hover {
+  filter: brightness(0.8);
+}
+
 /* Responsive */
 /* Laptop */
 @media (max-width: 1366px) {
@@ -374,6 +617,14 @@ footer .credit a {
 
   .about .row .content h3 {
     font-size: 1.5rem;
+  }
+
+  .menu .text-menu {
+    width: 80%;
+  }
+
+  .modal-container {
+    margin: 20% auto;
   }
 }
 
@@ -435,11 +686,32 @@ footer .credit a {
   .contact .row form {
     padding-top: 3rem;
   }
+
+  .menu .text-menu {
+    width: 7 0%;
+  }
+
+  .navbar .search-form {
+    width: 80%;
+  }
+
+  .modal-content {
+    flex-wrap: wrap;
+  }
+
+  .modal-content a {
+    width: 25%;
+    padding: auto;
+  }
 }
 
 /* Mobile */
 @media (max-width: 500px) {
   html {
     font-size: 55%;
+  }
+
+  .navbar .search-form {
+    width: 80%;
   }
 }
