--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,21 @@ body {
 }
 
 /* Shopping cart section */
+#shopping-cart-button {
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  font-size: 0.6rem;
+  border-radius: 6px;
+  background-color: red;
+  position: absolute;
+  top: 5px;
+  right: -10px;
+}
+
 .shopping-cart {
   position: absolute;
   top: 100%;
@@ -136,6 +151,7 @@ body {
   padding: 0 1.5rem;
   color: var(--bg);
   transition: 0.3s;
+  overflow: auto;
 }
 
 .shopping-cart.active {
@@ -143,35 +159,91 @@ body {
 }
 
 .navbar .shopping-cart img {
-  height: 6rem;
+  height: 4rem;
 }
 
 .shopping-cart .cart-item {
-  padding: 2rem 0;
+  padding: 1.2rem 0;
   display: flex;
   align-items: center;
   gap: 1rem;
   border-bottom: 1px dashed #666;
-  position: relative;
+  /* position: relative; */
 }
 
 .shopping-cart h3 {
-  font-size: 1.6rem;
-  padding-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .shopping-cart .item-price {
-  font-size: 1.3;
+  font-size: 1.2;
 }
 
-.shopping-cart .remove-item {
-  position: absolute;
-  right: 1rem;
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove {
+  display: inline-block;
+  padding: 2px 5px;
   cursor: pointer;
+  margin: 0 8px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
 }
 
-.shopping-cart .remove-item:hover {
-  color: var(--primary);
+.shopping-cart h4 {
+  font-size: 1.6rem;
+  text-align: center;
+  margin-top: 1rem;
+}
+
+/* form checkout */
+.form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 1px dashed black;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.form-container h5 {
+  text-align: center;
+  font-size: 1rem;
+}
+
+.form-container form {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container label {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container span {
+  text-align: right;
+}
+
+.form-container input {
+  background-color: #ddd;
+  padding: 5px;
+  font-size: 1rem;
+  width: 70%;
+}
+
+.form-container .checkout-button {
+  padding: 6px 14px;
+  background-color: royalblue;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 20px;
+  margin: 1rem auto;
+  cursor: pointer;
 }
 
 /* Hero section */
@@ -431,12 +503,6 @@ body {
 .products .product-price {
   font-size: 1.3rem;
   font-weight: 700;
-}
-
-.products .product-price span {
-  text-decoration: line-through;
-  font-weight: lighter;
-  font-size: 1rem;
 }
 
 /* Contact section */
